wrapped all ng-deep color specs in host element to prevent interference * added white toggle-icon styling to item-board component for consistency with other expansion-panels

--- a/kohese-portal/client/src/components/dashboard/assignment-dashboard/assignment-dashboard.component.scss
+++ b/kohese-portal/client/src/components/dashboard/assignment-dashboard/assignment-dashboard.component.scss
@@ -1,8 +1,11 @@
 @import '../../../app.component';
 
-/deep/ .mat-expansion-indicator:after {
+:host {
+  ::ng-deep .mat-expansion-indicator:after {
   color: whitesmoke;
+  }
 }
+
 mat-expansion-panel {
   width: 100%;
   box-shadow: 0 3px 1px -2px rgba(0,0,0,.8),
