--- a/kohese-portal/client/src/components/item-board/item-board.component.scss
+++ b/kohese-portal/client/src/components/item-board/item-board.component.scss
@@ -1,5 +1,11 @@
 @import '../../app.component';
 
+:host {
+  ::ng-deep .mat-expansion-indicator:after {
+    color: whitesmoke;
+  }
+}
+
 mat-expansion-panel {
   width: 100%;
   box-shadow: 0 3px 1px -2px rgba(0,0,0,.8),
